# math_problems

./: .gitignore
PreshTallwalkerLengthProblems/: Circle.py  Point.py  RandomMouseAndCats.py  Triangle.py  line_segments_in_square.py  points_on_circumference.py  triangle-area-in-circle.py
abcde-problem/: pyproject.toml
abcde-problem/abcde_problem/: __init__.py
abcde-problem/tests/: test_abcde_problem.py
