[tool.poetry]
name = "abcde-problem"
version = "0.1.0"
description = ""
authors = ["Andrew Engelhard <andy.engelhard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
